# ledgercore

./: .archledger.toml  .codecrate.toml  .gitignore  .taskledger.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.archledger/: storage.yaml
.archledger/profiles/arc42/sections/: content-0001.md  content-0002.md  content-0003.md  content-0004.md  content-0005.md  content-0006.md  content-0007.md  content-0008.md  content-0009.md  content-0010.md  content-0011.md  content-0012.md
.github/workflows/: tests.yml
.releaseledger/ledgers/main/events/: events.jsonl
.releaseledger/ledgers/main/indexes/: entries.json  releases.json
.releaseledger/ledgers/main/releases/0.1.0/: release.md
.releaseledger/ledgers/main/releases/0.1.0/audit/: commit-audit.yaml
.releaseledger/ledgers/main/releases/0.1.0/entries/: entry-0001.md  entry-0002.md  entry-0003.md  entry-0004.md  entry-0005.md  entry-0006.md  entry-0007.md  entry-0008.md  entry-0009.md  entry-0010.md  entry-0011.md  entry-0012.md  entry-0013.md
.releaseledger/ledgers/main/releases/0.2.0/: release.md
.releaseledger/ledgers/main/releases/0.2.0/audit/: commit-audit.yaml
.releaseledger/ledgers/main/releases/0.2.0/entries/: entry-0001.md  entry-0002.md  entry-0003.md  entry-0004.md  entry-0005.md  entry-0006.md  entry-0007.md  entry-0008.md  entry-0009.md  entry-0010.md
.releaseledger/ledgers/main/releases/0.2.1/: release.md
.releaseledger/ledgers/main/releases/0.2.1/audit/: commit-audit.yaml
.releaseledger/ledgers/main/releases/0.2.1/entries/: entry-0001.md  entry-0002.md  entry-0003.md  entry-0004.md  entry-0005.md  entry-0006.md
docs/: api.md  api.rst  build.sh  conf.py  index.md  index.rst  references.md  references.rst  release.md  release.rst  storage.md  storage.rst
examples/: frontmatter.py  refs.py  storage.py
ledgercore/: __init__.py  atomic.py  config.py  errors.py  frontmatter.py  hashing.py  ids.py  io.py  jsonio.py  jsonl.py  path_text.py  paths.py  refs.py  time.py  yamlio.py
scripts/: smoke_wheel.py
tests/: test_atomic.py  test_config.py  test_errors.py  test_frontmatter.py  test_hashing.py  test_ids.py  test_io.py  test_jsonio.py  test_jsonl.py  test_path_text.py  test_paths.py  test_refs.py  test_time.py  test_version.py  test_yamlio.py
