[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgercore"
version = "0.1.0"
description = "Generic ledger and storage primitives for Python projects"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
