[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ledgercore"
dynamic = ["version"]
description = "Generic ledger and storage primitives for Python projects"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "holgern" },
]
keywords = ["ledger", "storage", "frontmatter", "ids", "yaml", "json"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/ledgerwerk/ledgercore"
Repository = "https://github.com/ledgerwerk/ledgercore"
Issues = "https://github.com/ledgerwerk/ledgerwerk/issues"
Changelog = "https://github.com/ledgerwerk/ledgercore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "mypy",
    "types-PyYAML",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser>=2.0.0",
]
release = [
    "build",
    "twine",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ledgercore/_version.py"

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
